--- a/templates/kraken/index.twig
+++ b/templates/kraken/index.twig
@@ -6,13 +6,12 @@
 
     <h1>Kraken</h1>
 
+    <h2>What is this</h2>
+    <p>help help help</p>
+
+    <h2>Get out of here</h2>
     <ul class="list--bullet">
         <li><a href="{{ urlFor('kraken.applications') }}">Applications</a></li>
         <li><a href="{{ urlFor('kraken.environments') }}">Environments</a></li>
     </ul>
-
-    {% for item in test %}
-        <pre class="leader">{{ item|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
-    {% endfor %}
-
 {% endblock %}
