--- a/templates/base.kraken.twig
+++ b/templates/base.kraken.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block header %}
+{% block page_header %}
     {% embed 'partials/layout.header.twig' with {showNavigation: true} %}
         {% block banner %}
             <div class="hal">
