Create a sass pattern for status blocks

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,6 +54,7 @@
 @import "patterns/pagination";
 @import "patterns/scroll-thing";
 @import "patterns/split";
+@import "patterns/status-block";
 
 // must go last!
 @import "app/js";
