--- a/templates/kraken/configuration/configuration.twig
+++ b/templates/kraken/configuration/configuration.twig
@@ -5,11 +5,10 @@
 
 {% block content %}
 
-    <a href="{{ urlFor('kraken.status', {application: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
     <h1>Deployed Configuration</h1>
 
     <h4>Application</h4>
-    <p>{{ application.id }}</p>
+    <p>{{ application.name }}</p>
 
     <h4>Environment</h4>
     <p>{{ target.environment.name }}</p>
@@ -17,52 +16,19 @@
     <h4>Status</h4>
     <p>
         {% if target.configuration.id == configuration.id %}
-            Currently Deployed
+            {{ macros.status('Currently Deployed', 'success', 'tick') }}
         {% else %}
-            Old
+            Not Active
         {% endif %}
     </p>
 
     <h2>Configuration</h2>
-    {{ block('configuration') }}
+    {% include 'kraken/partial/configuration.twig' with {'properties': properties} %}
 
-{% endblock %}
+    <div>
+        <a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Application Status</a>
 
-{% block configuration %}
-
-    {% if properties %}
-        <table class="table--spacing-medium">
-            <thead>
-                <tr>
-                    <th>Property</th>
-                    <th class="t15">Type</th>
-                    <th>Value</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for property in properties %}
-                    <tr>
-                        <td><code>{{ property.key }}</code></td>
-                        <td>
-                            {{ property.isSecure ? macros.icon('locked') : '' }}
-                            {{ property|formatSchemaType }}
-                        </td>
-                        <td>
-                            {% set formatted = property|formatPropertyValue(0) %}
-                            {% if formatted is null %}
-                                {{ macros.icon('locked') }} Secure
-                            {% else %}
-                                <div class="pre-wrapper">
-                                    <pre>{{ formatted }}</pre>
-                                </div>
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>This configuration has no properties.</p>
-    {% endif %}
+        <a href="{{ urlFor('kraken.configuration.compare', {application: application.id}) }}">Compare to latest configuration</a>
+    </div>
 
 {% endblock %}
