--- a/templates/kraken/partial/configuration.twig
+++ b/templates/kraken/partial/configuration.twig
@@ -1,9 +1,12 @@
 {% import "partials/macros.twig" as macros %}
 
 {% if properties %}
-    <table class="table--spacing-medium">
+    <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
         <thead>
             <tr>
+                {% if dualmode %}
+                    <th></th>
+                {% endif %}
                 <th>Property</th>
                 <th class="t15">Type</th>
                 <th>Value</th>
@@ -12,21 +15,44 @@
         <tbody>
             {% for property in properties %}
                 <tr>
-                    <td><code>{{ property.key }}</code></td>
-                    <td>
-                        {{ property.isSecure ? macros.icon('locked') : '' }}
-                        {{ property|formatSchemaType }}
-                    </td>
-                    <td>
-                        {% set formatted = property|formatPropertyValue(0) %}
-                        {% if formatted is null %}
-                            {{ macros.icon('locked') }} Secure
-                        {% else %}
-                            <div class="pre-wrapper">
-                                <pre>{{ formatted }}</pre>
-                            </div>
+                    {% if property is property or property is configurationProperty %}
+
+                        {% if dualmode %}
+                            <td>
+                                <a href="{{ urlFor('kraken.property', {application: application.id, property: property.id}) }}">
+                                    {{ macros.icon('list') }}
+                                    <span class="tablesaw-collapse">View Configuration Property</span>
+                                </a>
+                            </td>
                         {% endif %}
-                    </td>
+
+                        <td><code>{{ property.schema.key }}</code></td>
+                        <td>{{ property.schema|formatSchemaType }}</td>
+
+                        <td>
+                            {% set formatted = property|formatPropertyValue(0) %}
+                            {% if formatted is null %}
+                                {{ macros.icon('locked') }} Secure
+                            {% else %}
+                                <div class="pre-wrapper">
+                                    <pre>{{ formatted }}</pre>
+                                </div>
+                            {% endif %}
+                        </td>
+
+                    {% else %}
+                        {% if dualmode %}
+                            <td></td>
+                        {% endif %}
+
+                        <td><code>{{ property.key }}</code></td>
+                        <td>{{ property|formatSchemaType }}</td>
+
+                        <td>
+                            {{ macros.status('Missing', 'error', 'spam-2') }}
+                        </td>
+                    {% endif %}
+
                 </tr>
             {% endfor %}
         </tbody>
